fix env files not work bug

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-DATABASE_USERNAME = sampleusername
-DATABASE_PASSWORD = sampleuserpassword
-DATABASE_HOST = samplehost
-DATABASE_NAME = samplename
+# Example for SQLALCHEMY_DATABASE_URL:
+# (mariadb) "mariadb+pymysql://root:toor@127.0.0.1:3306/company"
+# (postgresql) "postgresql://user:password@postgresserver/db"
+SQLALCHEMY_DATABASE_URL=database_type://user:password@database_adress:port/database
